<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/image_bg"
    tools:context="com.example.meriadok.aprendealeer2.GameMenu">


    <com.example.meriadok.aprendealeer2.AutoResizeTextViewSunn
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NIVELES"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#fea"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
       >


        <info.hoang8f.widget.FButton
            android:textColor="#FFFFFF"
            fbutton:buttonColor="#1abc9c"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Padres"
            android:id="@+id/botonPadres"
            android:layout_gravity="center_horizontal" />
        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <info.hoang8f.widget.FButton
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            fbutton:buttonColor="#1abc9c"
            android:textAllCaps="true"
            android:text="@string/Cuerpo"
            android:id="@+id/botonCuerpo"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <info.hoang8f.widget.FButton
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            fbutton:buttonColor="#1abc9c"
            android:textAllCaps="true"
            android:text="@string/Cosas"
            android:id="@+id/botonCosas"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <info.hoang8f.widget.FButton
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            fbutton:buttonColor="#1abc9c"
            android:textAllCaps="true"
            android:text="@string/Acciones"
            android:id="@+id/botonAcciones"
            android:layout_gravity="center_horizontal" />

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <info.hoang8f.widget.FButton
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            fbutton:buttonColor="#1abc9c"
            android:textAllCaps="true"
            android:text="Libro"
            android:id="@+id/botonLibro"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</RelativeLayout>
