<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_bg_game"
    android:weightSum="1"
    android:orientation="vertical"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.meriadok.aprendealeer2.ModuloPadres">

    <ViewFlipper
        android:id="@+id/flipperPadres"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textoPapa"
                android:gravity="center"
                android:textSize="80sp"
                android:textStyle="bold"
                android:text="@string/papa"
                android:textColor="#FF0000"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imagenPapa"
                android:src="@drawable/imagen_papa"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textoMama"
                android:textSize="80sp"
                android:textStyle="bold"
                android:text="@string/mama"
                android:textColor="#FF0000"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/imagenMama"
                android:src="@drawable/imagen_mama"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </RelativeLayout>

        <LinearLayout
            android:background="@drawable/image_bg"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <info.hoang8f.widget.FButton
                android:id="@+id/irJuegoPadres"
                android:text="@string/Jugar"
                android:textSize="30sp"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                fbutton:buttonColor="#1abc9c"
                android:textAllCaps="true"
                android:layout_marginTop="160dp"
                android:layout_gravity="center" />

            <View
                android:id="@+id/separacion"
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <info.hoang8f.widget.FButton
                android:id="@+id/repetirPadres"
                android:text="@string/repetir"
                android:textSize="30sp"
                android:layout_width="270dp"
                android:layout_height="60dp"
                android:textColor="#FFFFFF"
                fbutton:buttonColor="#1abc9c"
                android:textAllCaps="true"
                android:layout_gravity="center" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutJuego"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="2"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <com.example.meriadok.aprendealeer2.AutoResizeTextView
                    android:maxLines="1"
                    android:text="@string/papa"
                    android:id="@+id/opcionPapa"
                    android:textColor="#FF0000"
                    android:textSize="80sp"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
                <ImageView
                    android:id="@+id/resOpcionPapa"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">
                <com.example.meriadok.aprendealeer2.AutoResizeTextView
                    android:maxLines="1"
                    android:text="@string/mama"
                    android:id="@+id/opcionMama"
                    android:textColor="#FF0000"
                    android:textSize="80sp"
                    android:gravity="center"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
                <ImageView
                    android:id="@+id/resOpcionMama"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </FrameLayout>



        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:id="@+id/layoutVideo"
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <VideoView
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:id="@+id/videoVictoria"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />


        </RelativeLayout>

    </ViewFlipper>


</LinearLayout>
